# rnaenergy

./: .gitignore  LICENSE  MANIFEST.in  README.md  free_enthalpy_calculation.py  free_enthalpy_calculation_presentation.py  int11.py  int12.py  meta.yaml  pyproject.toml  requirements.txt  setup.cfg
example/: example1.txt  example2.txt  example3.html  example4.txt
modules/: dangle.py
rnaenergy/: dangle.py  int11.py  loop.py  rnacalculator.py  setup.py  stackfunction.py  terminaldict.npy  terminalstack.py  whatever.py
rnaenergy/energytable/: stackdict.npy
src/: dangle.py  free_enthalpy_calculation.py  loop.py  stackfunction.py  whatever.py
src/rnaenergy/: int11.py  rnacalculator.py  stackfunction.py  terminalstack.py  whatever.py
src/rnaenergy/energytable/: int11dict.npy  loopdict.npy
src/tests/: test_rnacalculator.py
