[metadata] 
name = RNA-gibbs-free-energy-calculator-LSchroefl
version = 1.0
author = Lucas Schroefl
author_email = lucas.schroefl@gmail.com
description = Algorithm to calculate the gibbs free enthalpy value of RNA conformations 
long_description = file: README.md
long_description_content_type = text/markdown 
url = https://github.com/LSchroefl/RNA-gibbs-free-energy-calculator
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent 

[options]
package_dir = 
	= src 
packages = find: #setuptools goes through the code to find any package dependencies, didn't work tho, I#ll create a requirements.txt file
python_requires = >=3.6
install_requires =
	os = 3.1,
	numpy = >=1.11.0, <= 1.13.0 # I think thats not correct
include_package_data = True # Includes all non-code files present in RNA-gibbs-free-energy-calculator in the build

[options.packages.find]
where = src
