[metadata] 
name = rnaenergy
version = 1.0
author = Lucas Schroefl
author_email = lucas.schroefl@gmail.com
description = Algorithm to calculate the gibbs free enthalpy values of RNA conformations 
long_description = file: README.md
long_description_content_type = text/markdown 
url = https://github.com/LSchroefl/rnaenergy
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent 

[options]
package_dir = 
	= rnaenergy
packages = find:
### adds all subfolders with _init__.py files in them as packages
python_requires = >=3.6
include_package_data = TRUE # Includes all non-code files present in RNA-gibbs-free-energy-calculator in the build (files in MANIFEST.in)

[options.packages.find]
where = rnaenergy
