[metadata] 
name = rnaenergy
version = 1.9
author = Lucas Schroefl
author_email = lucas.schroefl@gmail.com
description = Algorithm to calculate the gibbs free enthalpy values of RNA conformations 
long_description = file: README.md
long_description_content_type = text/markdown 
url = https://github.com/LSchroefl/rnaenergy
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent 

[options]
zip_safe = False
package_dir = 
	= src
	
packages = find:
### adds all subfolders with _init__.py files in them as packages

python_requires = >=3.6



include_package_data = TRUE # Includes all non-code files present in rnaenergy the build (files in MANIFEST.in)

install_requires =
	numpy==1.21.4
	python-math==0.0.1
	forgi==1.0


#does not work from testpypi, I'll let it go for the moment and test it with a pre-release version on pypi 

[options.package_data]
* = *.txt, *.npy

[options.packages.find]
where = src
